added more projects

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Pat B</title>
 </head>
 
@@ -51,11 +51,11 @@
 
     <!--About Me-->
     <div class="container" id="about">
-        <div class="card" style=margin-top:50px;background-color:rgba(117,190,218,0.7);>
+        <div class="card" style=margin-top:50px;>
             <div class="row">
                 <div class="col-sm-12, col-md-12, col-lg-12">
                     <h2
-                        style="margin-left:20px;margin-top:20px;color: white;font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 700">
+                        style="margin-left:20px;margin-top:20px;color: black;font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 700">
                         About
                         Me
                     </h2>
@@ -64,10 +64,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-12, col-md-4" id="picDiv">
-                    <img src="assets/images/Headshot.jpg" height= 400px; width= 400px;
-                    alt="headshot image" class="headshot">
+                    <!-- <img src="assets/images/Headshot.jpg" need to fix image transparency
+                    alt="headshot image" class="headshot"> -->
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-12" id ="bioTxt">
                     <div style="color: black;margin-left:20px;margin-top:10px;">
                         <p style=font-size:18px;> My Name is Patrick and I am very excited to add
                             software developing to my skill set! I am currently completing a FullStack Boot Camp
