--- a/index.html
+++ b/index.html
@@ -2,89 +2,233 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <title>Pat B</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Patrick - Portfolio</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="./css/scrolling-nav.css" rel="stylesheet">
+
 </head>
 
-<body>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+<body id="page-top">
 
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#services">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <!-- comment -->
+  <header class="text-white">
+    <div class="container text-center">
+      <h1>Patrick Black</h1>
+      <p class="lead">Software Developer</p>
+    </div>
+  </header>
 
-    <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" class="topnav">
-        <a class="navbar-brand" href="#">Pat B</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-
-            <span class="navbar-text" class="link-options">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-
-            </span>
+  <section id="about">
+    <div class="container">
+      <div class="row">
+          <div class="col-md-2 content">
+              <img src="./images/Headshot.jpg" width="230px" alt="Bare portrait">     
+          </div>
+  
+        <div class="col-lg-8 mx-auto">
+          <h2>About Me</h2>
+          <p>Hello! I'm Patrick. A full stack web developer, passionate about approaching 
+              programming challenges from different angles. Positioned well to provide unique perspectives 
+              on how end-users interact with websites and software platforms by leveraging my background in 
+              IT sales and data analytic’s.
+            </p>
+            <p>As for my education, I received my Bachelors of Science: Business Administration (Finance) 
+                and a Full Stack Developer Bootcamp Certificate: University of Minnesota.
+  </p>
+          <img src="./images/html.png"  alt="html icon pic" width="200" height="150">
+          <img src="./images/node.png" alt="html icon pic"  height="110">
+          <img src="./images/mysql.png" alt="html icon pic" height="110">
+          <img src="./images/mongodb.png" alt="html icon pic" height="110">
         </div>
-    </nav>
+      </div>  
+    </div>
+  </section>
 
-    <!--About Me-->
-    <div class="container" id="about">
-        <div class="card" style=margin-top:50px;>
-            <div class="row">
-                <div class="col-sm-12, col-md-12, col-lg-12">
-                    <h2
-                        style="margin-left:20px;margin-top:20px;color: black;font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 700">
-                        About
-                        Me
-                    </h2>
-                    <hr>
+  <section id="services" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>GitHub</h2>
+          <a  href="https://github.com/mrpatblack7">GitHub Profile</a>
+          <br>
+          <h2>Resume</h2>
+          <a  target=_blank href="#">My Resume (pdf)</a>
+          <br>
+          <br>
+          <h2>Check out some of my recent projects.</h2>
+          <br>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./images/clickygame.png" class="card-img-top" alt="foodbanx pic" height="250">
+                <div class="card-body">
+                  <h5 class="card-title">Clicky-game</h5>
+                  <p class="card-text">GIPHY API to make a dynamic web page that populates with gifs of my choice.</p>
+                  <a href="https://github.com/mrpatblack7/clicky-game" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://mrpatblack7.github.io/clicky-game/" class="btn btn-primary" target=_blank>GitHub Pages</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12, col-md-4" id="picDiv">
-                    <!-- <img src="assets/images/Headshot.jpg" need to fix image transparency
-                    alt="headshot image" class="headshot"> -->
-                </div>
-                <div class="col-sm-12" id ="bioTxt">
-                    <div style="color: black;margin-left:20px;margin-top:10px;">
-                        <p style=font-size:18px;> My Name is Patrick and I am very excited to add
-                            software developing to my skill set! I am currently completing a FullStack Boot Camp
-                             at the University of Minnesota Minneapolis, MN.</p>
-                        <p style=font-size:18px;> To see more about what I've been learning or projects I have completed
-                            click on the link below to my Github page or the "Portfolio Tab" above.</p>
+           </div>
 
-                        <a href="https://github.com/mrpatblack7/"><strong>My Github Page</strong></a>
+           <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="./images/cyrstal.png" class="card-img-top" alt="psychic pic" height="250">
+                  <div class="card-body">
+                    <h5 class="card-title">CrystalsCollector-Game</h5>
+                    <p class="card-text">the players goal to get to that number by clicking on crystals of varying values.</p>
+                    <a href="https://github.com/mrpatblack7/CrystalsCollector-Game" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://mrpatblack7.github.io/CrystalsCollector-Game/" class="btn btn-primary" target=_blank>GitHub Pages</a>
+                  </div>
+              </div>
+             </div>
 
+             <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/train.png" class="card-img-top" alt="trains pic" height="250">
+                    <div class="card-body">
+                      <h5 class="card-title">Firebase Train Scheduler</h5>
+                      <p class="card-text">Calculates train schedules based on user input.</p>
+                      <a href="https://github.com/mrpatblack7/Train-Scheduler" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://mrpatblack7.github.io/Train-Scheduler/" class="btn btn-primary" target=_blank>GitHub Pages</a>
                     </div>
-
                 </div>
+              </div>
+      </div>
+    </div>
+<br>
+<br>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./images/burgerScreenshot.PNG" class="card-img-top" alt="burger pic" height="250">
+            <div class="card-body">
+              <h5 class="card-title">Eat Da Burger</h5>
+              <p class="card-text">Burger logger with MySQL, Node, Express, and a homemade ORM.</p>
+              <a href="https://github.com/mrpatblack7/burger" class="btn btn-primary" target=_blank>GitHub Repo</a>
+              <a href="https://mrpatblack7.github.io/burger/" class="btn btn-primary" target=_blank>Heroku</a>
             </div>
+          </div>
+        </div>
+    
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./images/mplsProject.png" class="card-img-top" alt="servus pic" height="250">
+            <div class="card-body">
+              <h5 class="card-title">What's happening MPLS!</h5>
+              <p class="card-text">Volunteer meetup board using Nodejs, Express and MySQL</p>
+              <a href="https://github.com/mrpatblack7/projectComponents" class="btn btn-primary" target=_blank>GitHub Repo</a>
+              <a href="https://immense-crag-12175.herokuapp.com/" class="btn btn-primary" target=_blank>Heroku</a>
+            </div>
+          </div>
         </div>
 
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./images/gif.png" class="card-img-top" alt="giftastic pic" height="250">
+            <div class="card-body">
+              <h5 class="card-title">GifTastic!</h5>
+              <p class="card-text">A simple superhero animation retriever using an API.</p>
+              <a href="https://github.com/mrpatblack7/GifTastic" class="btn btn-primary" target=_blank>GitHub Repo</a>
+              <a href="https://mrpatblack7.github.io/GifTastic/" class="btn btn-primary" target=_blank>GitHub Pages</a>
+            </div>
+          </div>
+        </div>
+<br>
+<br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./images/friendFinder.png" class="card-img-top" alt="book search pic" height="250">
+                <div class="card-body">
+                  <h5 class="card-title">Friend Finder</h5>
+                  <p class="card-text">Node and Express Servers.</p>
+                  <a href="https://github.com/mrpatblack7/Friend-Finder-" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                  <a href="https://mrpatblack7.github.io/Friend-Finder-/" class="btn btn-primary" target=_blank>Heroku</a>
+                </div>
+              </div>
+            </div>
+        
+      </div>
+    </div>
+  </section>
 
+  <section id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>Contact Me</h2>
+         <br>
+          <h4>Address</h4>
+          <p class="lead">Minneapolis</p>
+          <br>
+          <h4>Phone</h4>
+          <p class="lead">601-919-6650</p>
+          <br>
+          <h4>Email</h4>
+          <p class="lead">mrpatblack@gmail.com</p>
+          <br>
+          <h4>LinkedIn</h4>
+          <a href="https://www.linkedin.com/in/patrickdblack/">My LinkedIn Profile</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white" target=_blank>Copyright &copy; Pat Black 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom JavaScript for this theme -->
+  <script src="js/scrolling-nav.js"></script>
 
 </body>
 
 </html>
+
